#
# QWWAD code Makefile, written by Paul Harrison, summer 1999
#
# You must read ../README before proceeding!
#
# Define the directory to put the executables, note you must have write
# access and make sure there is no `white space' at the end of the line

#BIN=/home/ph/bin

# Uncomment the compiler definitions below appropriate for your system
#
# HP-UX

#CC=cc
#CCOPTIONS=-Aa -D_HPUX_SOURCE
#LIBS=-lm
#NAGLIB=

# SunOS

#CC=cc
#CCOPTIONS= -DSUN -Xt
#LIBS=-lm
#NAGLIB=

# Linux

#CC=gcc
#CCOPTIONS=
#LIBS=-lm
#NAGLIB=-lnagc -lpthread

# IRIX

#CC=cc 
#CCOPTIONS=-ansi
#LIBS=-lm
#NAGLIB=-lnagc

# There should be no need to alter anything below this line

# The majority of the code can be compiled with a standard command

bin_PROGRAMS =  csss    \
		cszb    \
		d0      \
		d02D    \
		d03D    \
		dos     \
		ebe     \
		efcwire \
		efcwwf  \
	       	effv    \
		efiw    \
		efiwire \
		efkpsl  \
	       	efmfv   \
		efpqw   \
		efsdot  \
		efsdwf  \
	       	efshoot \
		efsqw   \
	       	efsx    \
	       	efwf    \
		efxm    \
		efxv    \
		gde     \
		hup     \
		ivdb    \
		ovl     \
		ppcd    \
		ppee    \
		ppsg    \
		ppvfq   \
		pth     \
		rlv-fcc \
		rlv-sc  \
		rlv-ss  \
	       	sbp     \
		scp     \
		sfr     \
		slk     \
		srcc    \
		srelo   \
	       	srmpr   \
	       	srrad   \
	       	tdb     \
	       	tsb 
