# Makefile.am - Automake input file for QWWAD project (source code)

noinst_HEADERS = const.h      \
		 d0-helpers.h \
		 dox.h        \
		 ef-helpers.h \
		 maths.h      \
		 ppff.h       \
		 struct.h

bin_PROGRAMS =  csss    \
		cszb    \
		d0      \
		d02D    \
		d03D    \
		dos     \
		ebe     \
		efcwire \
		efcwwf  \
	       	effv    \
		efiw    \
		efiwire \
		efkpsl  \
	       	efmfv   \
		efpqw   \
		efsdot  \
		efsdwf  \
	       	efshoot \
		efsqw   \
	       	efsx    \
	       	efwf    \
		efxm    \
		efxv    \
		gde     \
		hup     \
		ivdb    \
		ovl     \
		ppcd    \
		ppee    \
		ppsg    \
		ppvfq   \
		pth     \
		rlv-fcc \
		rlv-sc  \
		rlv-ss  \
	       	sbp     \
		scp     \
		sfr     \
		slk     \
		srcc    \
		srelo   \
	       	srmpr   \
	       	srrad   \
	       	tdb     \
	       	tsb
